--- a/h-m-front/src/Components/HeartRateChart/HeartRateChart.module.css
+++ b/h-m-front/src/Components/HeartRateChart/HeartRateChart.module.css
@@ -2,9 +2,17 @@
     background-color: white;
     border-radius: 0.5rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    padding: 1.5rem;
-    margin-bottom: 2rem;
+    /* padding: 1.5rem; */
+    /* margin-bottom: 2rem; */
     transition: all 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px 40px; /* Aumentado o padding horizontal para 40px */
   }
   
   .container:hover {
@@ -132,13 +140,6 @@
   .statsValue {
     font-size: 1.5rem;
     font-weight: 700;
-  }
-  
-  .footer {
-    margin-top: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
   }
   
   .bpmTag {
